fixed css overlaping lines in bannner in mobile screen

--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -130,7 +130,7 @@
                         text-overflow: ellipsis;
                         overflow: hidden;
                         display: -webkit-box;
-                        line-clamp: 4;
+                        -webkit-line-clamp: 4;
                         -webkit-box-orient: vertical;
                     }
                     > div {
